--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Split List</h1>
+    <h1>List of Links</h1>
     <textarea id="inputList" rows="10" placeholder="Enter items here..."></textarea><br>
     <button onclick="splitList()">Split List</button>
 
