--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <input type="text" class="title-input" placeholder="Title for the link">
             <input type="text" class="link-input" placeholder="Add a link for September">
             <button class="add-link-btn" onclick="addLink('September')">Add Link</button>
-            <div class="link-container" id="jSeptember-links"></div>
+            <div class="link-container" id="September-links"></div>
         </div>
 
         <div class="month-tile" id="October">
